# learnbgfx

./: CMakeLists.txt  README.md
02-cube/: compile_shader.bat  cube.cpp
03-mesh/: compile_shader.bat  fs_mesh.sc  mesh.cpp  varying.def.sc  vs_mesh.sc
04-instancing/: compile_shader.bat  instancing.cpp  vs_instancing.sc
helloworld/: helloworld.cpp
